add_executable(mystring_test1 mystring_test1.cpp)

add_executable(mystring_test2 mystring_test2.cpp)

add_executable(mystring_test3 mystring_test3.cpp)

add_executable(mystring_test4 mystring_test4.cpp)

add_executable(mystring_test5 mystring_test5.cpp)

add_executable(mystring_test6 mystring_test6.cpp)

add_executable(mystring_test7 mystring_test7.cpp)

add_executable(mystring_test8 mystring_test8.cpp)

add_executable(mystring_test9 mystring_test9.cpp)