add_executable(01-cin-cout-test 01-cin-cout-test.cpp)

add_executable(exercise1.2-main-return-value exercise1.2-main-return-value.cpp)
add_executable(exercise1.3-print-hello-world exercise1.3-print-hello-world.cpp)
add_executable(exercise1.4-multiplication-operator exercise1.4-multiplication-operator.cpp)
add_executable(exercise1.5-multiplication-operator2 exercise1.5-multiplication-operator2.cpp)